--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
     <body>
         <div class="wrapper-two hide">
-            <button class="close" id="close">Закрыть</button>
+            <button class="close" id="close-button">Закрыть</button>
             <form 
             class="formcarryForm" 
             action="https://formcarry.com/s/To4BvWdHO-"
             enctype="multipart/form-data"
             >
-            <div class="form">
+            <div class="form" id="form">
                     <input class="inp" type="text" name="name" placeholder="Введите имя" required/>
                     <input class="inp" type="email" name="email" placeholder="example@gmail.com" required/>
                     <input class="inp" type="tel" name="tel" placeholder="+0-000-00-00" required/>
